<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Riyadh</string>

    <string name="pref_location_formatted" translatable="false">location_formatted</string>
    <string name="pref_location_formatted_default" translatable="false">Select Your Location</string>

    <string name="pref_noOfDays_label">Number Of Days</string>
    <string name="pref_noOfDays_key" translatable="false">noOfDays</string>
    <string name="pref_noOfDays_default" translatable="false">7</string>


    <string name="pref_units_label">Unit</string>
    <string name="pref_units_key" translatable="false">unit</string>
    <string name="pref_units_celsius" translatable="false">celsius</string>
    <string name="pref_units_fahrenheit" translatable="false">fahrenheit</string>
</resources>
