<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="textCapWords"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <EditTextPreference
        android:defaultValue="@string/pref_noOfDays_default"
        android:inputType="number"
        android:key="@string/pref_noOfDays_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_noOfDays_label"
        android:id="@+id/noOfDaysPref"
        />

    <ListPreference
        android:defaultValue="@string/pref_units_celsius"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"
    />




</PreferenceScreen>
